[package]
name = "serial_container"
description = "a small library for serializing and deserializing into sequential bytestreams"
version = "0.2.0"
edition = "2021"
authors = ["Morten Römer <morten.roemer@gmx.de>"]
license-file = "LICENSE"
homepage = "https://github.com/MortenRoemer/stacker"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
